--- a/SAAC_iOS/Info.plist
+++ b/SAAC_iOS/Info.plist
@@ -32,6 +32,8 @@
 		<dict/>
 		<key>http://fillmurray.com</key>
 		<true/>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 	</dict>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
